--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -12,34 +12,31 @@
       <img src="assets/img/ica-slidebox-img-1.png" class="slide-image" />
       <h2 class="slide-title">
         Welcome to
-        <b>ICA</b>
+        <b>Business Hustle</b>
       </h2>
       <p>
         The
-        <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code
-        use.
+        <b>Startupville</b> event series is designed to create a safe environment for entrepreneurs, authors, creatives, digital nomads, and more to sit together and have non intrusive conversations about entrepreneurship, strategy and the world of business and open-source resources accessible to/for particular industries online. 
       </p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-2.png" class="slide-image" />
-      <h2 class="slide-title">What is Ionic?</h2>
+      <h2 class="slide-title">Who is this event for?</h2>
       <p>
-        <b>Ionic Framework</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies
-        like HTML, CSS, and JavaScript.</p>
+        <b>Startupville</b> is for creatives, digital nomads, entrepreneurs, writers, researchers, traders or employed individuals interested in alternative ways of possibly using their skill and knowledge to make money?. Come and learn how you can leverage knowledge, data and skill through active engagement with like-minded people.</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-3.png" class="slide-image" />
-      <h2 class="slide-title">What is Ionic Appflow?</h2>
+      <h2 class="slide-title">How do I attend?</h2>
       <p>
-        <b>Ionic Appflow</b> is a powerful set of services and features built on top of Ionic Framework that brings a totally new
-        level of app development agility to mobile dev teams.</p>
+        The event takes place on<b>129 Bree Street</b> in Cape Town. There are limited seats therefore online bookings are essential</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-4.png" class="slide-image" />
-      <h2 class="slide-title">Ready to Play?</h2>
+      <h2 class="slide-title">Ready to learn more?</h2>
       <ion-button fill="clear" (click)="startApp()">
         Continue
         <ion-icon slot="end" name="arrow-forward"></ion-icon>
