--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -12,7 +12,7 @@
       <img src="assets/img/startupville_img_01.png.png" class="slide-image" />
       <h2 class="slide-title">
         Welcome to
-        <b>Business Hustle</b>
+        <b>Startupville</b>
       </h2>
       <p>
         The
