--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -28,7 +28,7 @@
     </ion-slide>
 
     <ion-slide>
-      <img src="assets/img/ica-slidebox-img-3.png" class="slide-image" />
+      <img src="assets/img/Slide_image_03.gif" class="slide-image" />
       <h2 class="slide-title">How do I attend?</h2>
       <p>
         The event takes place on<b>129 Bree Street</b> in Cape Town. There are limited seats therefore online bookings are essential</p>
