--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -8,7 +8,7 @@
 
     <ion-tab-button tab="speakers">
       <ion-icon name="people"></ion-icon>
-      <ion-label>Speakers</ion-label>
+      <ion-label>Panelists</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="map">
