--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -6,7 +6,7 @@
       <ion-label>Schedule</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="speakers">
+    <ion-tab-button tab="panelists">
       <ion-icon name="people"></ion-icon>
       <ion-label>Panelists</ion-label>
     </ion-tab-button>
