--- a/src/app/pages/schedule/schedule.html
+++ b/src/app/pages/schedule/schedule.html
@@ -7,7 +7,7 @@
       <ion-segment-button value="all">
         All
       </ion-segment-button>
-      <ion-segment-button value="favorites">
+      <ion-segment-button value="Highlights">
         Favorites
       </ion-segment-button>
     </ion-segment>
