--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -16,7 +16,7 @@
       </h2>
       <p>
         The
-        <b>Startupville</b> event series is designed to create a safe environment for entrepreneurs, authors, creatives, digital nomads, and more to sit together and have non intrusive conversations about entrepreneurship, strategy and the world of business and open-source resources accessible to/for particular industries online. 
+        <b>Startupville</b> event series in collaboration with <b>Neighbourgood</b> is designed to create a safe environment for entrepreneurs, authors, creatives, digital nomads, and more to sit together and have non intrusive conversations about entrepreneurship, strategy and the world of business and open-source resources accessible to/for particular industries online. 
       </p>
     </ion-slide>
 
@@ -24,19 +24,19 @@
       <img src="assets/img/Slide_image_02.gif" class="slide-image" />
       <h2 class="slide-title">Who is this event for?</h2>
       <p>
-        <b>Startupville</b> is for creatives, digital nomads, entrepreneurs, writers, researchers, traders or employed individuals interested in alternative ways of possibly using their skill and knowledge to make money?. Come and learn how you can leverage knowledge, data and skill through active engagement with like-minded people.</p>
+        <b>Startupville</b> is for creatives, digital nomads, entrepreneurs, writers, researchers, traders or employed individuals interested in alternative ways of possibly using their skill and knowledge to make money. Come and learn how you can leverage knowledge, data and skill through active engagement with like-minded people.</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/Slide_image_03.gif" class="slide-image" />
-      <h2 class="slide-title">How do I attend?</h2>
+      <h2 class="slide-title">Where is this taking place?</h2>
       <p>
-        The event takes place on<b> 129 Bree Street</b> in Cape Town. There are limited seats therefore online bookings are essential</p>
+        The event takes place on<b> 129 Bree Street</b> in Cape Town in the modern Neighbourgood workspace outdoor courtyard that accentuates its uniqueness and draws in streams of natural light. There are limited seats therefore online bookings are essential</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-4.png" class="slide-image" />
-      <h2 class="slide-title">Ready to learn more?</h2>
+      <h2 class="slide-title">About the event?</h2>
       <ion-button fill="clear" (click)="startApp()">
         Continue
         <ion-icon slot="end" name="arrow-forward"></ion-icon>
