--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -21,7 +21,7 @@
     </ion-slide>
 
     <ion-slide>
-      <img src="assets/img/Slide_image_02.gif" class="slide-image" />
+      <img src="assets/img/image_002.gif" class="slide-image" />
       <h2 class="slide-title">Who is this event for?</h2>
       <p>
         <b>Startupville</b> is for creatives, digital nomads, entrepreneurs, writers, researchers, traders or employed individuals interested in alternative ways of possibly using their skill and knowledge to make money. Come and learn how you can leverage knowledge, data and skill through active engagement with like-minded people.</p>
