--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -35,7 +35,7 @@
     </ion-slide>
 
     <ion-slide>
-      <img src="assets/img/ica-slidebox-img-04png" class="slide-image" />
+      <img src="assets/img/ica-slidebox-img-04.gif" class="slide-image" />
       <h2 class="slide-title">About the event?</h2>
       <ion-button fill="clear" (click)="startApp()">
         Continue
