--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -24,7 +24,11 @@
     <h3 class="ion-padding-top ion-padding-start">About</h3>
 
     <p class="ion-padding-start ion-padding-end">
-      The Ionic Conference is a one-day conference on {{ conferenceDate | date: 'mediumDate' }} featuring talks from the Ionic team. It is focused on Ionic applications being built with Ionic Framework. This includes migrating apps to the latest version of the framework, Angular concepts, Webpack, Sass, and many other technologies used in Ionic 2. Tickets are completely sold out, and we’re expecting more than 1000 developers – making this the largest Ionic conference ever!
+     Startupville is a is a series of strategy sessions brought to you by Business Hustle © in collaboration with Neighbourgood. It's a place for software engineers, entrepreneurs, digital nomads and authors to gather and hear about world-class topics, once a week.
+
+In order to scale your startup you need to understand that Networking is a huge competitive advantage in the marketplace. Having done so, now you would need to get out of the weeds to work on the business and not in the busines. 
+      
+     
     </p>
 
     <h3 class="ion-padding-top ion-padding-start">Details</h3>
@@ -35,10 +39,10 @@
           Location
         </ion-label>
         <ion-select [(ngModel)]="location" [interfaceOptions]="selectOptions">
-          <ion-select-option value="madison">Madison, WI</ion-select-option>
-          <ion-select-option value="austin">Austin, TX</ion-select-option>
-          <ion-select-option value="chicago">Chicago, IL</ion-select-option>
-          <ion-select-option value="seattle">Seattle, WA</ion-select-option>
+          <ion-select-option value="madison">Neighbourgood Bree Street</ion-select-option>
+          <ion-select-option value="austin">Neighbourgood Cape Quarter</ion-select-option>
+          <ion-select-option value="chicago">Johanessburg</ion-select-option>
+          <ion-select-option value="seattle">Mafikeng, North West</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
