--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -51,7 +51,7 @@ In order to scale your startup you need to understand that Networking is a huge 
         </ion-label>
         <ion-datetime
           displayFormat="MMM DD, YYYY"
-          max="2056"
+          max="2022"
           [(ngModel)]="conferenceDate">
         </ion-datetime>
       </ion-item>
@@ -65,7 +65,7 @@ In order to scale your startup you need to understand that Networking is a huge 
           Wifi network
         </ion-label>
         <ion-label class="ion-text-end">
-          ica{{conferenceDate | date: 'y'}}
+          Neighbourgood Bree
         </ion-label>
       </ion-item>
       <ion-item>
