--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -31,7 +31,7 @@
       <img src="assets/img/Slide_image_003.gif" class="slide-image" />
       <h2 class="slide-title">Where is this taking place?</h2>
       <p>
-        The event takes place on<b> 129 Bree Street</b> in Cape Town in the modern Neighbourgood workspace outdoor courtyard. There are limited seats therefore online bookings are essential</p>
+        The event takes place on<b> 27 Somerset Rd, De Waterkant</b> in Cape Town in the modern Neighbourgood workspace. There are limited seats therefore online bookings are essential</p>
     </ion-slide>
 
     <ion-slide>
